# drgravata-app

./: .gitignore  .replit  README-PRISMA.md  build-prisma.ps1  gerar-prisma.ps1  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  theme.json
attached_assets/: Pasted--Elementos-de-Sofistica-o-Visual-Para-criar-uma-interface-que-se-destaque-e-transmita-qualidad-1743526256634.txt  Pasted-Alguns-casos-como-em-processos-os-numeros-est-o-quase-invisiveis-pode-corrigir-isso-Al-m-de-quem-1743528236197.txt
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/dashboard/: AIAssistantCard.tsx  CaseDetailCard.tsx  DeadlinesCard.tsx  RecentCasesCard.tsx  StatsCard.tsx
client/src/components/ui/: sidebar-navigation.tsx  user-avatar.tsx
client/src/layouts/: MainLayout.tsx
client/src/lib/: utils.ts
client/src/pages/: dashboard.tsx
client/src/pages/assistant/: index.tsx
client/src/pages/cases/: index.tsx
client/src/pages/clients/: index.tsx
client/src/pages/deadlines/: index.tsx
client/src/pages/documents/: index.tsx
prisma/: schema.prisma
prisma-generator/: Cargo.toml  README.md
prisma-generator/src/: main.rs
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  error.rs  main.rs  prisma.rs
