[package]
name = "prisma-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = ["sqlite"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
tokio = { version = "1.28.0", features = ["full"] } 