[package]
name = "drgravata-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "drgravata_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# Remove 'api-all' feature, keep only the specific features needed
tauri = { version = "1.5.4", features = ["shell-open", "process-command-api", "fs-all", "path-all", "dialog-all"] }
tauri-utils = "1.5.1" # Keep utils pinned to Tauri version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Main library with needed features
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = ["sqlite", "migrations"] }

tokio = { version = "1", features = ["full"] } # Allow latest Tokio 1.x
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] } # Para trabalhar com datas/horas

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

